--- a/css/index.css
+++ b/css/index.css
@@ -14,19 +14,28 @@
 .navbar {
     height: 70px;
     background-color:var(--headfoot);
-
 }
+
+
 
 /*jumbotron*/
 
 .jumbotron {
     background-image: url(../images/headshot.JPG);
-    height: 80vh;
+    height: 90vh;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
+
 /*skills*/
+
+.skills-card-img-top {
+    margin: 100px 50px;
+    border-radius: 300px;
+    height: 150px;
+    width: 150px;
+}
 
 /*about and contact*/
 
