--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,10 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+a:hover {
+    box-shadow: 3px 3px 5px 2px  rgba(0, 0, 0, 0.472);
+}
+
 /*variables*/
 
 :root {
@@ -39,6 +43,23 @@ h2 {
     border-radius: 300px;
     height: 150px;
     width: 150px;
+}
+
+/*work*/
+
+.work-card {
+
+}
+
+.card-img-top {
+    border-radius: 15px;
+    margin: 5px 2px;
+}
+
+.fb {
+    background-color: var(--headfoot);
+    border-color: var(--headfoot);
+    color: black;
 }
 
 /*about and contact*/
