--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 
 a:hover {
     box-shadow: 3px 3px 5px 2px  rgba(0, 0, 0, 0.472);
+    border-radius: 10px;
 }
 
 /*variables*/
@@ -47,10 +48,6 @@ h2 {
 
 /*work*/
 
-.work-card {
-
-}
-
 .card-img-top {
     border-radius: 15px;
     margin: 5px 2px;
@@ -63,6 +60,24 @@ h2 {
 }
 
 /*about and contact*/
+
+.contactlinks {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.contact {
+    font-size: 30px;
+}
+
+.contact:hover {
+    text-decoration: none;
+}
+
+.aboutcontact {
+    margin: 15px;
+}
 
 /*footer*/
 
